Added action title

--- a/Klinik.Web/Views/Pharmacy/PatientList.cshtml
+++ b/Klinik.Web/Views/Pharmacy/PatientList.cshtml
@@ -32,7 +32,7 @@
 						<th>@Klinik.Resources.UIMessages.Doctor</th>						
 						<th>@Klinik.Resources.UIMessages.TransactionDate</th>												
 						<th>@Klinik.Resources.UIMessages.Status</th>
-						<th></th>
+						<th>@Klinik.Resources.UIMessages.Action</th>
 					</tr>
 				</thead>
 			</table>
