--- a/Klinik.Web/Views/Shared/_Layout.cshtml
+++ b/Klinik.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,8 @@
     <link href="~/Content/Octopus/assets/vendor/bootstrap-multiselect/bootstrap-multiselect.css" rel="stylesheet" />
 
     <!-- Specific Page Vendor CSS -->
-    <link rel="stylesheet" href="~/Content/Octopus/assets/vendor/select2/select2.css" />
+    @*<link rel="stylesheet" href="~/Content/Octopus/assets/vendor/select2/select2.css" />*@
+    <link href="~/Content/Login/vendor/select2/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/Content/Octopus/assets/vendor/jquery-datatables-bs3/assets/css/datatables.css" />
 
     <!-- Nuget CSS -->
@@ -44,7 +45,7 @@
     <script src="~/Scripts/jquery-3.0.0.js"></script>
     <script src="~/Content/Octopus/assets/vendor/Modernizr/modernizr.js"></script>
     <script src="~/Scripts/toastr.js"></script>
-    
+
     @RenderSection("Styles", required: false)
 
 </head>
@@ -190,7 +191,8 @@
     @RenderSection("Jquerys", required: false)
 
     <!-- Specific Page Vendor -->
-    <script src="~/Content/Octopus/assets/vendor/select2/select2.js"></script>
+    @*<script src="~/Content/Octopus/assets/vendor/select2/select2.js"></script>*@
+    <script src="~/Content/Login/vendor/select2/select2.min.js"></script>
     <script src="~/Content/Octopus/assets/vendor/jquery-datatables/media/js/jquery.dataTables.js"></script>
     <script src="~/Content/Octopus/assets/vendor/jquery-datatables/extras/TableTools/js/dataTables.tableTools.min.js"></script>
     <script src="~/Content/Octopus/assets/vendor/jquery-datatables-bs3/assets/js/datatables.js"></script>
