add fitur send for call queue

--- a/Klinik.Web/Views/Loket/Index.cshtml
+++ b/Klinik.Web/Views/Loket/Index.cshtml
@@ -141,8 +141,8 @@
             </h5>
         </header>
         <div class="panel-body">
-            <div style="width:100%; margin:0 auto">
-                <table id="tbRegistration" class="table table-striped table-bordered dt-responsive" cellspacing="0">
+            <div style="margin:0 auto">
+                <table id="tbRegistration" style="width:120%" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                     <thead>
                         <tr>
                             <th>@Klinik.Resources.UIMessages.ID</th>
@@ -268,7 +268,8 @@
                 {
                     "targets": [1],
                     "searchable": true,
-                    "orderable": true
+                    "orderable": true,
+                    "width":"20%"
                 },
                 {
                     "targets": [2],
@@ -313,7 +314,8 @@
                 {
                     "targets": [10],
                     "searchable": true,
-                    "orderable": true
+                    "orderable": true,
+                    "width":"100%"
                 }
                 ],
 
@@ -331,10 +333,11 @@
                 { "data": "TransactionDateStr", "name": "TransactionDateStr", "autoWidth": true },
                 { "data": "StatusStr", "name": "StatusStr", "autoWidth": true },
                 {
-                    "render": function (data, type, full, meta) {
-                        return "<button class='btn btn-success' onclick='Process(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Process</button>" +
-                            " | <button class='btn btn-warning' onclick='Hold(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Hold</button>" +
-                            " | <button class='btn btn-danger' onclick='Finish(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Finish</button>";
+                   "autoWidth": true, "render": function (data, type, full, meta) {
+                        return "<button class='btn btn-sm btn-success' onclick='Process(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Process</button>" +
+                            " | <button class='btn btn-sm btn-warning' onclick='Hold(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Hold</button>" +
+                            " | <button class='btn btn-sm btn-danger' onclick='Finish(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Finish</button>" +
+                            " | <button class='btn btn-sm btn-info' onclick='SendCall(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Call</button>" ;
                     }
                 }
             ]
@@ -432,6 +435,30 @@
     function FinishPatient(Id) {
         $.ajax({
             url: '/Loket/FinishRegistration?id=' + Id,
+            type: 'POST',
+            success: function (result) {
+                if (result.Status) {
+                    toastr.options.closeButton = false;
+                    toastr.options.timeOut = 2000;
+                    location.reload();
+                    toastr.success(result.Message);
+                }
+                else {
+                    toastr.error(result.Message);
+                }
+            }
+        });
+    }
+
+
+        var SendCall = function (ID) {
+            CallPatient(ID);
+        return false;
+        }
+
+         function CallPatient(Id) {
+        $.ajax({
+            url: '/Loket/SendForCalling?id=' + Id,
             type: 'POST',
             success: function (result) {
                 if (result.Status) {
